--- a/spec/importers/trade_lead/fbopen/expected_leads.yaml
+++ b/spec/importers/trade_lead/fbopen/expected_leads.yaml
@@ -5,6 +5,7 @@
   :procurement_organization_address: R-4 SW Idaho/Nevada Acquisition Center
   :classification_code: '81'
   :industry: '322211'
+  :ita_industries: []
   :procurement_office_address: 1249 S. Vinnell Way, SUITE 200 Boise ID 83709
   :title: SEEDLING BOXES
   :contact: Diana J. Early, Purchasing Agent, Phone 208373-4134, Fax 208-373-4168,
@@ -48,6 +49,7 @@
   :procurement_organization_address: DLA Aviation - BSM
   :classification_code: '29'
   :industry: '336412'
+  :ita_industries: []
   :procurement_office_address: 8000 Jefferson Davis Highway Richmond VA 23297-5000
   :title: Procurement of NSN 2915-01-566-6706, SPRAYBAR, MAIN, AIRCRAFT
   :contact: Christopher L. Robinson, Contracting Officer, Phone 8042793647, Fax 8042793813,
