--- a/spec/importers/trade_lead/australia/results.yaml
+++ b/spec/importers/trade_lead/australia/results.yaml
@@ -15,7 +15,7 @@
   :start_date: '2011-12-18'
   :end_date: '2013-01-28'
   :country: AU
-  :url: https://www.tenders.gov.au/?event=public.advancedsearch.keyword&keyword=CN1121942
+  :url: http://bit.ly/1M995hi
   :source: AUSTRALIA
 - :agency: Defence Materiel Organisation
   :publish_date_amended: '2013-01-04'
@@ -32,7 +32,7 @@
   :start_date: '2011-01-31'
   :end_date: '2013-06-28'
   :country: AU
-  :url: https://www.tenders.gov.au/?event=public.advancedsearch.keyword&keyword=CN389204-A1
+  :url: http://bit.ly/1KQmtJZ
   :source: AUSTRALIA
 - :agency: Defence Materiel Organisation
   :publish_date_amended:
@@ -51,5 +51,5 @@
   :start_date: '2013-01-02'
   :end_date: '2013-02-26'
   :country: AU
-  :url: https://www.tenders.gov.au/?event=public.advancedsearch.keyword&keyword=CN1122002
+  :url: http://bit.ly/1KQmtK2
   :source: AUSTRALIA
