--- a/spec/importers/trade_lead/fbopen/expected_leads.yaml
+++ b/spec/importers/trade_lead/fbopen/expected_leads.yaml
@@ -35,7 +35,7 @@
     Point of Contact: Diana Early, Contracting Officer, Phone (208) 373-4134, E-mail:
     dearly@fs.fed.us'
   :competitive_procurement_strategy: Total Small Business
-  :url: https://www.fbo.gov/spg/USDA/FS/261/AG-0261-S-13-0079/listing.html
+  :url: http://1.usa.gov/1Z1MVDN
   :specific_location: BR
   :specific_address: Ada County Boise, ID
   :contract_number: AG-0261-S-13-0079
@@ -77,7 +77,7 @@
     The anticipated solicitation issue date is June 16, 2013. The anticipated closing
     date is July 15, 2013.
   :competitive_procurement_strategy: N/A
-  :url: https://www.fbo.gov/spg/DLA/J3/DSCR-BSM/SPE4A5-13-R-0992/listing.html
+  :url: http://1.usa.gov/1Z1MSI8
   :specific_location: BR
   :specific_address: 8000 Jefferson Davis Highway Richmond, VA
   :contract_number: SPE4A5-13-R-0992
