--- a/spec/cassettes/importers/trade_leads/fbopen/presol_source_yml.yml
+++ b/spec/cassettes/importers/trade_leads/fbopen/presol_source_yml.yml
@@ -19,7 +19,7 @@ http_interactions:
       message: OK
     headers:
       Date:
-      - Tue, 01 Dec 2015 21:54:35 GMT
+      - Thu, 10 Dec 2015 19:30:25 GMT
       Server:
       - Apache
       X-Frame-Options:
@@ -33,7 +33,7 @@ http_interactions:
       Cache-Control:
       - max-age=0, private, must-revalidate
       X-Request-Id:
-      - 742de6da-af4c-498f-9c22-47ced6f3b400
+      - 7c12876b-2439-4940-b63d-4714f7092638
       Status:
       - 200 OK
       Vary:
@@ -48,5 +48,42 @@ http_interactions:
       encoding: UTF-8
       string: "[]"
     http_version: 
-  recorded_at: Tue, 01 Dec 2015 21:54:34 GMT
+  recorded_at: Thu, 10 Dec 2015 19:30:26 GMT
+- request:
+    method: get
+    uri: https://api-ssl.bitly.com/v3/user/link_save?access_token=<BITLY_API_TOKEN>&longUrl=https://www.fbo.gov/spg/HHS/CDCP/PGOA/2013-N-15012/listing.html&title=TradeLead::Fbopen
+    body:
+      encoding: US-ASCII
+      string: ''
+    headers:
+      Accept-Encoding:
+      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
+      Accept:
+      - "*/*"
+      User-Agent:
+      - Ruby
+  response:
+    status:
+      code: 200
+      message: OK
+    headers:
+      Server:
+      - nginx
+      Date:
+      - Thu, 10 Dec 2015 19:30:26 GMT
+      Content-Type:
+      - application/json; charset=utf-8
+      Content-Length:
+      - '255'
+      Connection:
+      - keep-alive
+      Etag:
+      - '"599994b81c8dc682b15f3ea33b4567e3e0dfd135"'
+    body:
+      encoding: UTF-8
+      string: '{"status_code": 304, "data": {"link_save": {"link": "http://1.usa.gov/1Z1MEku",
+        "aggregate_link": "http://bit.ly/1Z1MEkv", "long_url": "https://www.fbo.gov/spg/HHS/CDCP/PGOA/2013-N-15012/listing.html",
+        "new_link": 0}}, "status_txt": "LINK_ALREADY_EXISTS"}'
+    http_version: 
+  recorded_at: Thu, 10 Dec 2015 19:30:26 GMT
 recorded_with: VCR 2.9.3
