--- a/spec/importers/trade_lead/state/results.yaml
+++ b/spec/importers/trade_lead/state/results.yaml
@@ -19,7 +19,7 @@
     new construction of a level III and IV healthcare hospital in the city of Monteria,
     Córdoba (Clinica Universitaria Medicina Integral -"CUMI")
   :tags: Health; Construction
-  :url: http://www.iadb.org/en/projects/project-description-title,1303.html?id=CO-L1146
+  :url: http://bit.ly/1LfhtNJ
   :contact: DACEY, KRISTIN - Inter-American Development Bank
   :comments:
   :submitting_officer: Asike, Chuka
@@ -47,7 +47,7 @@
   :comments:
   :submitting_officer: Chuka Asike
   :submitting_officer_contact: asikec@state.gov
-  :url: http://web.worldbank.org/external/projects/main?pagePK=64283627&piPK=73230&theSitePK=40941&menuPK=22842
+  :url: http://bit.ly/1LfhjG4
   :status: Pipeline
   :id: DATATABLE.538
   :source: "STATE"
@@ -84,7 +84,7 @@
     Qatar. More details of the General Conditions of Tenders available on: http://www.ashghal.gov.qa/English/Bids/Bids/Pages/default.aspx'
   :submitting_officer: Hala Rharrit
   :submitting_officer_contact: RharritH@state.gov
-  :url: http://www.ashghal.gov.qa/English/Bids/Bids/Lists/TendersEn/DispForm2.aspx?List=63e70945%2D1f5e%2D4614%2Daa38%2Dca1eb77134e0&ID=1315&Source=http%3A%2F%2Fwww%2Eashghal%2Egov%2Eqa%2FEnglish%2FBids%2FBids%2FPages%2Flarge%5Ftnders%2Easpx
+  :url: http://bit.ly/1Lfhrpe
   :status: Pipeline
   :id: DATATABLE.174
   :source: "STATE"
@@ -112,7 +112,7 @@
   :comments:
   :submitting_officer:
   :submitting_officer_contact:
-  :url: http://web.worldbank.org/external/projects/main?pagePK=64283627&piPK=73230&theSitePK=40941&menuPK=228424&Projectid=P117635
+  :url: http://bit.ly/1MtB7XS
   :status: Pipeline
   :id: DATATABLE.66
   :source: "STATE"
