Add ability to lookup NAICS codes

--- a/spec/importers/trade_lead/fbopen/expected_leads.yaml
+++ b/spec/importers/trade_lead/fbopen/expected_leads.yaml
@@ -4,7 +4,7 @@
   :procurement_office: Forest Service
   :procurement_organization_address: R-4 SW Idaho/Nevada Acquisition Center
   :classification_code: '81'
-  :industry: '322211'
+  :industry: '322211: Corrugated and Solid Fiber Box Manufacturing'
   :ita_industries: []
   :procurement_office_address: 1249 S. Vinnell Way, SUITE 200 Boise ID 83709
   :title: SEEDLING BOXES
@@ -48,7 +48,7 @@
   :procurement_office: DLA Acquisition Locations
   :procurement_organization_address: DLA Aviation - BSM
   :classification_code: '29'
-  :industry: '336412'
+  :industry: '336412: Aircraft Engine and Engine Parts Manufacturing'
   :ita_industries: []
   :procurement_office_address: 8000 Jefferson Davis Highway Richmond VA 23297-5000
   :title: Procurement of NSN 2915-01-566-6706, SPRAYBAR, MAIN, AIRCRAFT
