--- a/spec/cassettes/importers/trade_leads/fbopen/complete_source_yml.yml
+++ b/spec/cassettes/importers/trade_leads/fbopen/complete_source_yml.yml
@@ -2,55 +2,6 @@
 http_interactions:
 - request:
     method: get
-    uri: http://im.govwizely.com/api/terms.json?log_failed=false&mapped_term=322211&source=TradeLead::Fbopen
-    body:
-      encoding: US-ASCII
-      string: ''
-    headers:
-      Accept-Encoding:
-      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
-      Accept:
-      - "*/*"
-      User-Agent:
-      - Ruby
-  response:
-    status:
-      code: 200
-      message: OK
-    headers:
-      Date:
-      - Thu, 10 Dec 2015 19:18:52 GMT
-      Server:
-      - Apache
-      X-Frame-Options:
-      - SAMEORIGIN
-      X-Xss-Protection:
-      - 1; mode=block
-      X-Content-Type-Options:
-      - nosniff
-      Etag:
-      - '"d751713988987e9331980363e24189ce"'
-      Cache-Control:
-      - max-age=0, private, must-revalidate
-      X-Request-Id:
-      - efe878d8-4233-4f0c-8464-2939f1c80886
-      Status:
-      - 200 OK
-      Vary:
-      - Accept-Encoding
-      Content-Length:
-      - '22'
-      Connection:
-      - close
-      Content-Type:
-      - application/json; charset=utf-8
-    body:
-      encoding: UTF-8
-      string: "[]"
-    http_version: 
-  recorded_at: Thu, 10 Dec 2015 19:18:52 GMT
-- request:
-    method: get
     uri: https://api-ssl.bitly.com/v3/user/link_save?access_token=<BITLY_API_TOKEN>&longUrl=https://www.fbo.gov/spg/USDA/FS/261/AG-0261-S-13-0079/listing.html&title=TradeLead::Fbopen
     body:
       encoding: US-ASCII
@@ -70,25 +21,25 @@ http_interactions:
       Server:
       - nginx
       Date:
-      - Thu, 10 Dec 2015 19:18:53 GMT
+      - Tue, 15 Dec 2015 16:11:20 GMT
       Content-Type:
       - application/json; charset=utf-8
       Content-Length:
-      - '241'
+      - '258'
       Connection:
       - keep-alive
       Etag:
-      - '"c6ad8cfb094e0955873c4a9716f6d6541ea1658a"'
+      - '"26825c2604e38b935dd71a9bcb83c1fc5204de0b"'
     body:
       encoding: UTF-8
-      string: '{"status_code": 200, "data": {"link_save": {"link": "http://1.usa.gov/1Z1MVDN",
+      string: '{"status_code": 304, "data": {"link_save": {"link": "http://1.usa.gov/1Z1MVDN",
         "aggregate_link": "http://bit.ly/1JeX8lE", "long_url": "https://www.fbo.gov/spg/USDA/FS/261/AG-0261-S-13-0079/listing.html",
-        "new_link": 1}}, "status_txt": "OK"}'
+        "new_link": 0}}, "status_txt": "LINK_ALREADY_EXISTS"}'
     http_version: 
-  recorded_at: Thu, 10 Dec 2015 19:18:53 GMT
+  recorded_at: Tue, 15 Dec 2015 16:11:20 GMT
 - request:
     method: get
-    uri: http://im.govwizely.com/api/terms.json?log_failed=false&mapped_term=336412&source=TradeLead::Fbopen
+    uri: http://im.govwizely.com/api/terms.json?log_failed=false&mapped_term=322211:%20Corrugated%20and%20Solid%20Fiber%20Box%20Manufacturing&source=TradeLead::Fbopen
     body:
       encoding: US-ASCII
       string: ''
@@ -105,7 +56,7 @@ http_interactions:
       message: OK
     headers:
       Date:
-      - Thu, 10 Dec 2015 19:18:53 GMT
+      - Tue, 15 Dec 2015 16:11:20 GMT
       Server:
       - Apache
       X-Frame-Options:
@@ -119,7 +70,7 @@ http_interactions:
       Cache-Control:
       - max-age=0, private, must-revalidate
       X-Request-Id:
-      - 787259cd-1111-4fa5-b805-9023ad93efd6
+      - d635cc30-9050-4bf7-9dab-38e733ae9469
       Status:
       - 200 OK
       Vary:
@@ -134,7 +85,7 @@ http_interactions:
       encoding: UTF-8
       string: "[]"
     http_version: 
-  recorded_at: Thu, 10 Dec 2015 19:18:53 GMT
+  recorded_at: Tue, 15 Dec 2015 16:11:20 GMT
 - request:
     method: get
     uri: https://api-ssl.bitly.com/v3/user/link_save?access_token=<BITLY_API_TOKEN>&longUrl=https://www.fbo.gov/spg/DLA/J3/DSCR-BSM/SPE4A5-13-R-0992/listing.html&title=TradeLead::Fbopen
@@ -156,20 +107,69 @@ http_interactions:
       Server:
       - nginx
       Date:
-      - Thu, 10 Dec 2015 19:18:53 GMT
+      - Tue, 15 Dec 2015 16:11:21 GMT
       Content-Type:
       - application/json; charset=utf-8
       Content-Length:
-      - '244'
+      - '261'
       Connection:
       - keep-alive
       Etag:
-      - '"03eb514b52576741bab2e2946e615468d566b2c2"'
+      - '"897126b6d0f6ba51cec14d7931d78c0307bd1d43"'
     body:
       encoding: UTF-8
-      string: '{"status_code": 200, "data": {"link_save": {"link": "http://1.usa.gov/1Z1MSI8",
+      string: '{"status_code": 304, "data": {"link_save": {"link": "http://1.usa.gov/1Z1MSI8",
         "aggregate_link": "http://bit.ly/1YkMQfc", "long_url": "https://www.fbo.gov/spg/DLA/J3/DSCR-BSM/SPE4A5-13-R-0992/listing.html",
-        "new_link": 1}}, "status_txt": "OK"}'
+        "new_link": 0}}, "status_txt": "LINK_ALREADY_EXISTS"}'
     http_version: 
-  recorded_at: Thu, 10 Dec 2015 19:18:53 GMT
+  recorded_at: Tue, 15 Dec 2015 16:11:21 GMT
+- request:
+    method: get
+    uri: http://im.govwizely.com/api/terms.json?log_failed=false&mapped_term=336412:%20Aircraft%20Engine%20and%20Engine%20Parts%20Manufacturing&source=TradeLead::Fbopen
+    body:
+      encoding: US-ASCII
+      string: ''
+    headers:
+      Accept-Encoding:
+      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
+      Accept:
+      - "*/*"
+      User-Agent:
+      - Ruby
+  response:
+    status:
+      code: 200
+      message: OK
+    headers:
+      Date:
+      - Tue, 15 Dec 2015 16:11:21 GMT
+      Server:
+      - Apache
+      X-Frame-Options:
+      - SAMEORIGIN
+      X-Xss-Protection:
+      - 1; mode=block
+      X-Content-Type-Options:
+      - nosniff
+      Etag:
+      - '"d751713988987e9331980363e24189ce"'
+      Cache-Control:
+      - max-age=0, private, must-revalidate
+      X-Request-Id:
+      - 810a55ad-63b1-4070-a02c-018f188c19e3
+      Status:
+      - 200 OK
+      Vary:
+      - Accept-Encoding
+      Content-Length:
+      - '22'
+      Connection:
+      - close
+      Content-Type:
+      - application/json; charset=utf-8
+    body:
+      encoding: UTF-8
+      string: "[]"
+    http_version: 
+  recorded_at: Tue, 15 Dec 2015 16:11:21 GMT
 recorded_with: VCR 2.9.3
