--- a/spec/cassettes/importers/trade_leads/fbopen/full_source_input_yml.yml
+++ b/spec/cassettes/importers/trade_leads/fbopen/full_source_input_yml.yml
@@ -2,7 +2,7 @@
 http_interactions:
 - request:
     method: get
-    uri: http://im.govwizely.com/api/terms.json?log_failed=false&mapped_term=331318&source=TradeLead::Fbopen
+    uri: http://im.govwizely.com/api/terms.json?log_failed=false&mapped_term=331318:%20Other%20Aluminum%20Rolling,%20Drawing,%20and%20Extruding&source=TradeLead::Fbopen
     body:
       encoding: US-ASCII
       string: ''
@@ -19,7 +19,7 @@ http_interactions:
       message: OK
     headers:
       Date:
-      - Thu, 10 Dec 2015 19:13:45 GMT
+      - Tue, 15 Dec 2015 16:08:47 GMT
       Server:
       - Apache
       X-Frame-Options:
@@ -33,7 +33,7 @@ http_interactions:
       Cache-Control:
       - max-age=0, private, must-revalidate
       X-Request-Id:
-      - 0ab05c70-82b1-41fe-b20a-469658d7dd92
+      - 6a4f2063-254b-4376-b276-25c7e1b271c4
       Status:
       - 200 OK
       Vary:
@@ -48,7 +48,7 @@ http_interactions:
       encoding: UTF-8
       string: "[]"
     http_version: 
-  recorded_at: Thu, 10 Dec 2015 19:13:45 GMT
+  recorded_at: Tue, 15 Dec 2015 16:08:47 GMT
 - request:
     method: get
     uri: https://api-ssl.bitly.com/v3/user/link_save?access_token=<BITLY_API_TOKEN>&longUrl=https://www.fbo.gov/spg/DLA/J3/DSCC-BSM/SPE7M815Q0425/listing.html&title=TradeLead::Fbopen
@@ -70,7 +70,7 @@ http_interactions:
       Server:
       - nginx
       Date:
-      - Thu, 10 Dec 2015 19:13:45 GMT
+      - Tue, 15 Dec 2015 16:08:47 GMT
       Content-Type:
       - application/json; charset=utf-8
       Content-Length:
@@ -85,10 +85,10 @@ http_interactions:
         "aggregate_link": "http://bit.ly/1JeXyZb", "long_url": "https://www.fbo.gov/spg/DLA/J3/DSCC-BSM/SPE7M815Q0425/listing.html",
         "new_link": 0}}, "status_txt": "LINK_ALREADY_EXISTS"}'
     http_version: 
-  recorded_at: Thu, 10 Dec 2015 19:13:45 GMT
+  recorded_at: Tue, 15 Dec 2015 16:08:47 GMT
 - request:
     method: get
-    uri: http://im.govwizely.com/api/terms.json?log_failed=false&mapped_term=339994&source=TradeLead::Fbopen
+    uri: http://im.govwizely.com/api/terms.json?log_failed=false&mapped_term=339994:%20Broom,%20Brush,%20and%20Mop%20Manufacturing&source=TradeLead::Fbopen
     body:
       encoding: US-ASCII
       string: ''
@@ -105,7 +105,7 @@ http_interactions:
       message: OK
     headers:
       Date:
-      - Thu, 10 Dec 2015 19:13:45 GMT
+      - Tue, 15 Dec 2015 16:08:47 GMT
       Server:
       - Apache
       X-Frame-Options:
@@ -119,7 +119,7 @@ http_interactions:
       Cache-Control:
       - max-age=0, private, must-revalidate
       X-Request-Id:
-      - 0efad97d-94f3-46ad-b816-459d7d8e671a
+      - cf8015dd-8bd5-4502-82ac-a4a783c66837
       Status:
       - 200 OK
       Vary:
@@ -134,7 +134,7 @@ http_interactions:
       encoding: UTF-8
       string: "[]"
     http_version: 
-  recorded_at: Thu, 10 Dec 2015 19:13:45 GMT
+  recorded_at: Tue, 15 Dec 2015 16:08:48 GMT
 - request:
     method: get
     uri: https://api-ssl.bitly.com/v3/user/link_save?access_token=<BITLY_API_TOKEN>&longUrl=https://www.fbo.gov/notices/5eaf5409ca1351bb517077dfa0637e2e&title=TradeLead::Fbopen
@@ -156,22 +156,22 @@ http_interactions:
       Server:
       - nginx
       Date:
-      - Thu, 10 Dec 2015 19:13:46 GMT
+      - Tue, 15 Dec 2015 16:08:48 GMT
       Content-Type:
       - application/json; charset=utf-8
       Content-Length:
-      - '235'
+      - '252'
       Connection:
       - keep-alive
       Etag:
-      - '"7e75d4022ec8e9bfcfe29360e172a73768afe0b8"'
+      - '"88cec87912f2bbc37f6ba7cad2f81149dff5bd84"'
     body:
       encoding: UTF-8
-      string: '{"status_code": 200, "data": {"link_save": {"link": "http://1.usa.gov/1Z1Mrh9",
+      string: '{"status_code": 304, "data": {"link_save": {"link": "http://1.usa.gov/1Z1Mrh9",
         "aggregate_link": "http://bit.ly/1YkNUzu", "long_url": "https://www.fbo.gov/notices/5eaf5409ca1351bb517077dfa0637e2e",
-        "new_link": 1}}, "status_txt": "OK"}'
+        "new_link": 0}}, "status_txt": "LINK_ALREADY_EXISTS"}'
     http_version: 
-  recorded_at: Thu, 10 Dec 2015 19:13:46 GMT
+  recorded_at: Tue, 15 Dec 2015 16:08:48 GMT
 - request:
     method: get
     uri: https://api-ssl.bitly.com/v3/user/link_save?access_token=<BITLY_API_TOKEN>&longUrl=https://www.fbo.gov/notices/4a5d49fddc31fdc4c5433fa49311fdda&title=TradeLead::Fbopen
@@ -193,20 +193,20 @@ http_interactions:
       Server:
       - nginx
       Date:
-      - Thu, 10 Dec 2015 19:13:46 GMT
+      - Tue, 15 Dec 2015 16:08:48 GMT
       Content-Type:
       - application/json; charset=utf-8
       Content-Length:
-      - '235'
+      - '252'
       Connection:
       - keep-alive
       Etag:
-      - '"0c93844154560d020a86bbb781985e3f0b11f69a"'
+      - '"cbda32355c1658f27664bea8dee3c82186617442"'
     body:
       encoding: UTF-8
-      string: '{"status_code": 200, "data": {"link_save": {"link": "http://1.usa.gov/1Z1Mrhb",
+      string: '{"status_code": 304, "data": {"link_save": {"link": "http://1.usa.gov/1Z1Mrhb",
         "aggregate_link": "http://bit.ly/1YkNVn8", "long_url": "https://www.fbo.gov/notices/4a5d49fddc31fdc4c5433fa49311fdda",
-        "new_link": 1}}, "status_txt": "OK"}'
+        "new_link": 0}}, "status_txt": "LINK_ALREADY_EXISTS"}'
     http_version: 
-  recorded_at: Thu, 10 Dec 2015 19:13:46 GMT
+  recorded_at: Tue, 15 Dec 2015 16:08:48 GMT
 recorded_with: VCR 2.9.3
