--- a/spec/cassettes/importers/trade_leads/fbopen/patch_source_short_input_yml.yml
+++ b/spec/cassettes/importers/trade_leads/fbopen/patch_source_short_input_yml.yml
@@ -2,55 +2,6 @@
 http_interactions:
 - request:
     method: get
-    uri: http://im.govwizely.com/api/terms.json?log_failed=false&mapped_term=562991&source=TradeLead::Fbopen
-    body:
-      encoding: US-ASCII
-      string: ''
-    headers:
-      Accept-Encoding:
-      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
-      Accept:
-      - "*/*"
-      User-Agent:
-      - Ruby
-  response:
-    status:
-      code: 200
-      message: OK
-    headers:
-      Date:
-      - Thu, 10 Dec 2015 19:29:48 GMT
-      Server:
-      - Apache
-      X-Frame-Options:
-      - SAMEORIGIN
-      X-Xss-Protection:
-      - 1; mode=block
-      X-Content-Type-Options:
-      - nosniff
-      Etag:
-      - '"d751713988987e9331980363e24189ce"'
-      Cache-Control:
-      - max-age=0, private, must-revalidate
-      X-Request-Id:
-      - 21f0542f-7c54-4d77-b77f-8c66591e88fb
-      Status:
-      - 200 OK
-      Vary:
-      - Accept-Encoding
-      Content-Length:
-      - '22'
-      Connection:
-      - close
-      Content-Type:
-      - application/json; charset=utf-8
-    body:
-      encoding: UTF-8
-      string: "[]"
-    http_version: 
-  recorded_at: Thu, 10 Dec 2015 19:29:48 GMT
-- request:
-    method: get
     uri: https://api-ssl.bitly.com/v3/user/link_save?access_token=<BITLY_API_TOKEN>&longUrl=https://www.fbo.gov/spg/USAF/AMC/92CONS/FA4620-14-Q-A011/listing.html&title=TradeLead::Fbopen
     body:
       encoding: US-ASCII
@@ -70,25 +21,25 @@ http_interactions:
       Server:
       - nginx
       Date:
-      - Thu, 10 Dec 2015 19:29:49 GMT
+      - Tue, 15 Dec 2015 16:14:46 GMT
       Content-Type:
       - application/json; charset=utf-8
       Content-Length:
-      - '244'
+      - '261'
       Connection:
       - keep-alive
       Etag:
-      - '"c1d29ea3a9b3d108e02f4c5be65a6f2eee7c2e19"'
+      - '"cdb747310bc83fd3e3a006b563d9ae9d72517129"'
     body:
       encoding: UTF-8
-      string: '{"status_code": 200, "data": {"link_save": {"link": "http://1.usa.gov/1Z1NZru",
+      string: '{"status_code": 304, "data": {"link_save": {"link": "http://1.usa.gov/1Z1NZru",
         "aggregate_link": "http://bit.ly/1MtB5iT", "long_url": "https://www.fbo.gov/spg/USAF/AMC/92CONS/FA4620-14-Q-A011/listing.html",
-        "new_link": 1}}, "status_txt": "OK"}'
+        "new_link": 0}}, "status_txt": "LINK_ALREADY_EXISTS"}'
     http_version: 
-  recorded_at: Thu, 10 Dec 2015 19:29:49 GMT
+  recorded_at: Tue, 15 Dec 2015 16:14:46 GMT
 - request:
     method: get
-    uri: http://im.govwizely.com/api/terms.json?log_failed=false&mapped_term=561790&source=TradeLead::Fbopen
+    uri: http://im.govwizely.com/api/terms.json?log_failed=false&mapped_term=562991:%20Septic%20Tank%20and%20Related%20Services&source=TradeLead::Fbopen
     body:
       encoding: US-ASCII
       string: ''
@@ -105,7 +56,7 @@ http_interactions:
       message: OK
     headers:
       Date:
-      - Thu, 10 Dec 2015 19:29:49 GMT
+      - Tue, 15 Dec 2015 16:14:46 GMT
       Server:
       - Apache
       X-Frame-Options:
@@ -119,7 +70,7 @@ http_interactions:
       Cache-Control:
       - max-age=0, private, must-revalidate
       X-Request-Id:
-      - d95c2d92-72d5-42a2-af18-0095fe66577f
+      - 64064389-381c-4b91-873d-537bd75168b6
       Status:
       - 200 OK
       Vary:
@@ -134,7 +85,7 @@ http_interactions:
       encoding: UTF-8
       string: "[]"
     http_version: 
-  recorded_at: Thu, 10 Dec 2015 19:29:49 GMT
+  recorded_at: Tue, 15 Dec 2015 16:14:46 GMT
 - request:
     method: get
     uri: https://api-ssl.bitly.com/v3/user/link_save?access_token=<BITLY_API_TOKEN>&longUrl=https://www.fbo.gov/notices/d22c329c7c384c1a8a831ece0637a123&title=TradeLead::Fbopen
@@ -156,25 +107,25 @@ http_interactions:
       Server:
       - nginx
       Date:
-      - Thu, 10 Dec 2015 19:29:49 GMT
+      - Tue, 15 Dec 2015 16:14:46 GMT
       Content-Type:
       - application/json; charset=utf-8
       Content-Length:
-      - '235'
+      - '252'
       Connection:
       - keep-alive
       Etag:
-      - '"3f9495e915c84e24be9563e7f69e8feb0177429c"'
+      - '"1995e342a8899061120ae031dcc4e0dcf3842ec0"'
     body:
       encoding: UTF-8
-      string: '{"status_code": 200, "data": {"link_save": {"link": "http://1.usa.gov/1Z1NYnn",
+      string: '{"status_code": 304, "data": {"link_save": {"link": "http://1.usa.gov/1Z1NYnn",
         "aggregate_link": "http://bit.ly/1MtB5zd", "long_url": "https://www.fbo.gov/notices/d22c329c7c384c1a8a831ece0637a123",
-        "new_link": 1}}, "status_txt": "OK"}'
+        "new_link": 0}}, "status_txt": "LINK_ALREADY_EXISTS"}'
     http_version: 
-  recorded_at: Thu, 10 Dec 2015 19:29:49 GMT
+  recorded_at: Tue, 15 Dec 2015 16:14:46 GMT
 - request:
     method: get
-    uri: http://im.govwizely.com/api/terms.json?log_failed=false&mapped_term=812320&source=TradeLead::Fbopen
+    uri: http://im.govwizely.com/api/terms.json?log_failed=false&mapped_term=561790:%20Other%20Services%20to%20Buildings%20and%20Dwellings&source=TradeLead::Fbopen
     body:
       encoding: US-ASCII
       string: ''
@@ -191,7 +142,7 @@ http_interactions:
       message: OK
     headers:
       Date:
-      - Thu, 10 Dec 2015 19:29:49 GMT
+      - Tue, 15 Dec 2015 16:14:46 GMT
       Server:
       - Apache
       X-Frame-Options:
@@ -205,7 +156,7 @@ http_interactions:
       Cache-Control:
       - max-age=0, private, must-revalidate
       X-Request-Id:
-      - 6348b9c0-2531-4ee1-b3c8-e246b779de69
+      - 7b875ebe-b562-4d16-95f0-f681954e717d
       Status:
       - 200 OK
       Vary:
@@ -220,7 +171,7 @@ http_interactions:
       encoding: UTF-8
       string: "[]"
     http_version: 
-  recorded_at: Thu, 10 Dec 2015 19:29:49 GMT
+  recorded_at: Tue, 15 Dec 2015 16:14:46 GMT
 - request:
     method: get
     uri: https://api-ssl.bitly.com/v3/user/link_save?access_token=<BITLY_API_TOKEN>&longUrl=https://www.fbo.gov/notices/5386fb47876daf8cb97bda7e218a7fbd&title=TradeLead::Fbopen
@@ -242,20 +193,69 @@ http_interactions:
       Server:
       - nginx
       Date:
-      - Thu, 10 Dec 2015 19:29:49 GMT
+      - Tue, 15 Dec 2015 16:14:46 GMT
       Content-Type:
       - application/json; charset=utf-8
       Content-Length:
-      - '235'
+      - '252'
       Connection:
       - keep-alive
       Etag:
-      - '"63ca9e78b56b3b7855e5dd9a87207f31ef91d46b"'
+      - '"d21c01bf4086971e2f5d8d1188cc8cf6814bd49a"'
     body:
       encoding: UTF-8
-      string: '{"status_code": 200, "data": {"link_save": {"link": "http://1.usa.gov/1Z1NZrw",
+      string: '{"status_code": 304, "data": {"link_save": {"link": "http://1.usa.gov/1Z1NZrw",
         "aggregate_link": "http://bit.ly/1MtB52h", "long_url": "https://www.fbo.gov/notices/5386fb47876daf8cb97bda7e218a7fbd",
-        "new_link": 1}}, "status_txt": "OK"}'
+        "new_link": 0}}, "status_txt": "LINK_ALREADY_EXISTS"}'
     http_version: 
-  recorded_at: Thu, 10 Dec 2015 19:29:49 GMT
+  recorded_at: Tue, 15 Dec 2015 16:14:46 GMT
+- request:
+    method: get
+    uri: http://im.govwizely.com/api/terms.json?log_failed=false&mapped_term=812320:%20Drycleaning%20and%20Laundry%20Services%20(except%20Coin-Operated)&source=TradeLead::Fbopen
+    body:
+      encoding: US-ASCII
+      string: ''
+    headers:
+      Accept-Encoding:
+      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
+      Accept:
+      - "*/*"
+      User-Agent:
+      - Ruby
+  response:
+    status:
+      code: 200
+      message: OK
+    headers:
+      Date:
+      - Tue, 15 Dec 2015 16:14:46 GMT
+      Server:
+      - Apache
+      X-Frame-Options:
+      - SAMEORIGIN
+      X-Xss-Protection:
+      - 1; mode=block
+      X-Content-Type-Options:
+      - nosniff
+      Etag:
+      - '"d751713988987e9331980363e24189ce"'
+      Cache-Control:
+      - max-age=0, private, must-revalidate
+      X-Request-Id:
+      - 53d4c546-d922-42a6-afc1-6ece2edfd502
+      Status:
+      - 200 OK
+      Vary:
+      - Accept-Encoding
+      Content-Length:
+      - '22'
+      Connection:
+      - close
+      Content-Type:
+      - application/json; charset=utf-8
+    body:
+      encoding: UTF-8
+      string: "[]"
+    http_version: 
+  recorded_at: Tue, 15 Dec 2015 16:14:46 GMT
 recorded_with: VCR 2.9.3
