--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,21 @@
 bundler_args: --without development staging production
 language: ruby
 sudo: false
-services:
-  - elasticsearch
+
+env:
+  - ES_VERSION=2.2.0
 
 addons:
- code_climate:
-   repo_token: b2be59fc94d6de5b889a16c640227b42d40d8aa21df90fad79dd70f2687d630c
+  code_climate:
+    repo_token: b2be59fc94d6de5b889a16c640227b42d40d8aa21df90fad79dd70f2687d630c
+
+before_install:
+  - "mkdir /tmp/elasticsearch"
+  - "wget -O - https://download.elasticsearch.org/elasticsearch/release/org/elasticsearch/distribution/tar/elasticsearch/${ES_VERSION}/elasticsearch-${ES_VERSION}.tar.gz | tar xz --directory=/tmp/elasticsearch --strip-components=1"
+  - "/tmp/elasticsearch/bin/plugin install delete-by-query"
+  - 'echo ''index.number_of_shards: 1'' | tee --append /tmp/elasticsearch/config/elasticsearch.yml'
+  - "/tmp/elasticsearch/bin/elasticsearch &"
+  - "sleep 10"
 
 notifications:
   slack: govwizely:R9Nhshn0NO7eRh4ThXaMKqWw
