Remove Case Solution and Trade Agreement

--- a/spec/importers/salesforce_article/generic/results.yaml
+++ b/spec/importers/salesforce_article/generic/results.yaml
@@ -38,7 +38,7 @@
   :first_published_date: '2015-11-03'
   :last_published_date: '2015-11-03'
   :public_url: http://apps.export.gov/article?id=Antidumping-and-Countervailing-Resources-AD-CVD-Petition-Counseling
-  :reference: This information is provided for general information purposes only.
+  :references: This information is provided for general information purposes only.
     When interpreting and applying the law, please refer to the Tariff Act of 1930
     (http://ia.ita.doc.gov/regs/title7.txt), as amended, (19 U.S.C. 1671-1671h, 1673-1673h)
     and the related regulations in Title 19 of the Code of Federal Regulations (http://www.gpo.gov/fdsys/pkg/CFR-2003-title19-vol1/content-detail.html#351).
