--- a/spec/importers/salesforce_article/state_report/results.yaml
+++ b/spec/importers/salesforce_article/state_report/results.yaml
@@ -9,7 +9,7 @@
   :first_published_date: '2015-12-14'
   :last_published_date: '2015-12-14'
   :public_url: http://apps.export.gov/article?id=Montana-Exporting-Companies
-  :reference: Profile of U.S. Importing and Exporting Companies, U.S. Census Bureau.
+  :references: Profile of U.S. Importing and Exporting Companies, U.S. Census Bureau.
     https://www.census.gov/foreign-trade/Press-Release/edb/2013/index.html
   :section: Exporting Companies
   :summary: 
