--- a/spec/importers/salesforce_article/top_markets/results.yaml
+++ b/spec/importers/salesforce_article/top_markets/results.yaml
@@ -43,7 +43,7 @@
   :first_published_date: '2016-01-10'
   :last_published_date: '2016-01-10'
   :public_url: http://apps.export.gov/article?id=Overview-of-Technical-Textiles-in-Brazil
-  :reference: "”2010 ITMF Annual Conference: Brazil and Its Textile Industry.” Textile
+  :references: "”2010 ITMF Annual Conference: Brazil and Its Textile Industry.” Textile
     world. Sept/Oct 2010. Thurston, Charles. “Nonwovens demand outpaces Latin American
     economies.” Nonwovens Industry Magazine. Jan 2014."
   :section: Overview
