--- a/spec/importers/salesforce_article/country_commercial/results.yaml
+++ b/spec/importers/salesforce_article/country_commercial/results.yaml
@@ -22,7 +22,7 @@
   :first_published_date: '2016-02-10'
   :last_published_date: '2016-02-10'
   :public_url: http://apps.export.gov/article?id=Iraq-Rice
-  :reference: Prepared by our U.S. Embassies abroad. With its network of 108 offices
+  :references: Prepared by our U.S. Embassies abroad. With its network of 108 offices
     across the United States and in more than 75 countries, the U.S. Commercial Service
     of the U.S. Department of Commerce utilizes its global presence and international
     marketing expertise to help U.S. companies sell their products and services worldwide.
