[#108444844] Upgrade elasticsearch to the latest 2.x version
- Travis...

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,19 @@
 bundler_args: --without development staging production
 language: ruby
+sudo: false
+
+env:
+  - ES_VERSION=2.2.0
 
 addons:
   code_climate:
     repo_token: b2be59fc94d6de5b889a16c640227b42d40d8aa21df90fad79dd70f2687d630c
 
 before_install:
-  - wget https://download.elastic.co/elasticsearch/elasticsearch/elasticsearch-2.2.0.deb && sudo dpkg -i --force-confnew elasticsearch-2.2.0.deb && true
-  - sudo service elasticsearch start
+  - "mkdir /tmp/elasticsearch"
+  - "wget -O - https://download.elasticsearch.org/elasticsearch/release/org/elasticsearch/distribution/tar/elasticsearch/${ES_VERSION}/elasticsearch-${ES_VERSION}.tar.gz | tar xz --directory=/tmp/elasticsearch --strip-components=1"
+  - "/tmp/elasticsearch/bin/elasticsearch &"
+  - "sleep 10"
 
 notifications:
   slack: govwizely:R9Nhshn0NO7eRh4ThXaMKqWw
