[#108444844] Upgrade elasticsearch to the latest 2.x version
- install delete-by-query plugin to retain backward compatibility

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ addons:
 before_install:
   - "mkdir /tmp/elasticsearch"
   - "wget -O - https://download.elasticsearch.org/elasticsearch/release/org/elasticsearch/distribution/tar/elasticsearch/${ES_VERSION}/elasticsearch-${ES_VERSION}.tar.gz | tar xz --directory=/tmp/elasticsearch --strip-components=1"
+  - "/tmp/elasticsearch/bin/plugin install delete-by-query"
   - "/tmp/elasticsearch/bin/elasticsearch &"
   - "sleep 10"
 
