[#108444844] Upgrade elasticsearch to the latest 2.x version
- Fix test-case race conditions around time precision and index flushing
- Fix Travis test case ambiguity caused by multiple shards

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ before_install:
   - "mkdir /tmp/elasticsearch"
   - "wget -O - https://download.elasticsearch.org/elasticsearch/release/org/elasticsearch/distribution/tar/elasticsearch/${ES_VERSION}/elasticsearch-${ES_VERSION}.tar.gz | tar xz --directory=/tmp/elasticsearch --strip-components=1"
   - "/tmp/elasticsearch/bin/plugin install delete-by-query"
+  - 'echo ''index.number_of_shards: 1'' | tee --append /tmp/elasticsearch/config/elasticsearch.yml'
   - "/tmp/elasticsearch/bin/elasticsearch &"
   - "sleep 10"
 
